--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -90,3 +90,9 @@
     height: auto;
   } */
 }
+@media only screen and (max-width: 600px) {
+  .slider-container {
+    width: 100%;
+    bottom: 20px;
+  }
+}
