--- a/src/header.css
+++ b/src/header.css
@@ -228,4 +228,28 @@ hr {
     cursor: pointer;
     opacity: 0.7;
   }
+  .e-church-parent {
+    padding-left: 2%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .image-background {
+    position: relative;
+    height: 600px;
+  }
+  .image-text {
+    width: 100%;
+    top: 180px;
+  }
+  .image-text h2 {
+    font-size: 45px;
+    line-height: 40px;
+    width: 60%;
+    margin-left: 20%;
+  }
+  .image-text h3 {
+    font-size: 25px;
+    font-weight: 600;
+    top: 35px;
+  }
 }
