--- a/src/subHeader.css
+++ b/src/subHeader.css
@@ -44,7 +44,7 @@ img.image-1 {
   text-align: center;
   background-color: rgb(246, 246, 246);
   margin-top: 5%;
-  border-radius: 50px;
+  border-radius: 30px;
 }
 .social-handles {
   font-size: 170%;
@@ -53,12 +53,13 @@ img.image-1 {
 .social-div {
   font-family: Montserrat;
   margin-bottom: 5%;
+  font-size: 85%;
 }
 .social-item {
   background-color: rgb(235, 235, 235);
   padding: 5% 5% 5% 5%;
   margin: 5% 5% 5% 3%;
-  border-radius: 10px;
+  border-radius: 7px;
 }
 .about-social {
   font-size: 90%;
@@ -110,8 +111,22 @@ img.image-1 {
     position: relative;
     top: -50px;
   }
-
   .image-grid {
     grid-row: 2;
+  }
+  .social-handles {
+    font-size: 25px;
+  }
+  .social-b {
+    font-size: 200%;
+  }
+  .social-name {
+    font-size: 120%;
+  }
+  .about-social {
+    font-size: 80%;
+  }
+  .social-div {
+    margin-bottom: 3%;
   }
 }
