--- a/src/resources.css
+++ b/src/resources.css
@@ -1,8 +1,7 @@
 .video-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-
-  margin-bottom: 5%;
+  margin: 5% 0% 5% 0;
 }
 .item {
   position: relative;
