--- a/src/giving.css
+++ b/src/giving.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Montserrat;
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
+}
+
 .giving-image-container img {
   position: relative;
   top: 150px;
