--- a/src/header.css
+++ b/src/header.css
@@ -1,15 +1,20 @@
+@font-face {
+  font-family: Montserrat;
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
+}
+
 html {
   overflow: scroll;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   margin: 0;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0;
-}
+} */
 body {
   overflow: scroll;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   margin: 0;
   padding: 0;
   width: 100%;
