--- a/src/prayerRequest.css
+++ b/src/prayerRequest.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Spoof;
+  src: url("../assets/fonts/Spoof-Regular.ttf");
+}
+
 .form {
   width: 75%;
   height: 440px;
@@ -26,7 +31,7 @@
   outline: none;
   resize: none;
   border: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: Spoof;
   transition: all 0.3s;
   border-bottom: 2px solid #bebed2;
 }
@@ -44,7 +49,7 @@ p:before {
   float: right;
   padding: 8px 12px;
   margin: 8px 0 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: Spoof;
   border: 2px solid #78788c;
   border-radius: 5px;
   background: 0;
