--- a/src/subHeader.css
+++ b/src/subHeader.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: Montserrat;
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
+}
+@font-face {
+  font-family: Aurora;
+  src: url("../assets/fonts/Aurora\ 2.otf");
+}
+
 .sub-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
