--- a/src/testimonies.css
+++ b/src/testimonies.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Montserrat;
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
+}
+
 .testimonies-parent {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
