--- a/src/UpcomingPrograms.css
+++ b/src/UpcomingPrograms.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
   font-family: Spoof;
   src: url("../assets/fonts/Spoof-Regular.ttf");
-}
+} */
 
 .calendar-parent {
   font-family: Spoof;
