--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: Spoof;
-  src: url("../assets/fonts/Spoof-Regular.ttf");
+  font-family: Montserrat;
+  src: url("../assets/fonts/Montserrat-Regular.ttf");
 }
