--- a/src/increasecelebration.css
+++ b/src/increasecelebration.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   height: 0px;
-  margin-bottom: 10%;
+  margin-bottom: 3%;
 }
 input[type="checkbox"] {
   padding: 20px;
@@ -18,4 +18,7 @@ input[type="checkbox"] {
 }
 .method {
   padding-left: 20%;
+}
+.details {
+  background-color: red;
 }
